# DarkNews-generator

./: .gitignore  LICENSE  README.md  TODO.md  codecov.yml  junit.xml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: node.js.yml  tests.yml
digitized/Pedro_v3/: wpd_project.json
digitized/charmIIfluxes/: nurun.json
examples/: Example_0__start_here.ipynb  Example_0_start_here.ipynb  Example_1_benchmark_points.ipynb  Example_1_total_xsecs.ipynb  Example_1_xsecs.ipynb  Example_2_TMM.ipynb  Example_2_decays.ipynb  Example_2_total_xsecs.ipynb  Example_3_TMM.ipynb  Example_3_decay_rates.ipynb  Example_3_geometries.ipynb  Example_3_miniboone.ipynb  Example_3_toy_analysis.ipynb  Example_4_MB_analysis.ipynb  Example_4_TMM.ipynb  Example_4_fastbnb.ipynb  Example_4_microboone.ipynb  Example_5_MB_spectra.ipynb  Example_5_toy_MiniBooNE_fit.ipynb  FastBNB_example_1_MB_analysis.ipynb  FastBNB_example_2_MB_spectra.ipynb  Untitled.ipynb  __TEST_ORCA_feature.ipynb  __TEST_Rens_DIS.ipynb  a  event -1.gv  event 0.gv  event 1.gv  fit_3p2_general.ipynb  gen.run(log="ERROR")  microboone_study.ipynb  pandas_df.parquet  parameters_example_1.txt  parameters_example_2.txt  run_simulation_example.ipynb  template_custom_experiment.txt  template_parameters_file.txt  test_generator.ipynb  test_models.ipynb
examples/ToyAnalysis/: Cfourvec.pyx  __init__.py  analysis.py  analysis_decay.py  analysis_decay_MCprime.py  cuts.py  fit_functions.py  fourvec.py  grid_fit.py  hist_plot.py  math_vecs.py  plot_tools.py
examples/ToyAnalysis/include/miniboone_2020/: wpd_cos_theta.tar
examples_analysis/: example_0.ipynb
examples_analysis/analysis_dn/: analysis.py  decayer.py  exp_params.py  grid_fit.py
mathematica/: HNL_decay_dirac.nb  HNL_decay_majorana.nb  NIIPS.nb  N_2_body_decays.nb  N_to_nu_pi_pi.nb  TODO.md  Z_decay_demo_of_majorana_sum.nb  boson_decay_to_2_fermions.nb  dark_bremsstrahlung  dark_bremsstrahlung.nb  nu_e_e_helicity.nb  nu_e_e_helicity_dirac.nb  test_of_cross_section_flattening.nb  upscattering.nb  upscattering_dipole.nb  upscattering_dirac.nb  upscattering_majorana.nb
src/DarkNews/: AssignmentParser.py  Cfourvec.c  Cfourvec.pyx  ExpressionParser.py  GenLauncher.py  MC.py  ModelContainer.py  __init__.py  amplitudes.py  const.py  const_dics.py  decay_rates.py  decayer.py  detector.py  dn_gen.py  fixing_functions.py  fourvec.py  geom.py  geom_pep8.py  integrands.py  model.py  nuclear_tools.py  parsing_tools.py  pdg.py  phase_space.py  plot_tools.py  printer.py  processes.py  scripts.py  test  test.py  xsecs.py
src/DarkNews/aux_data/: mass20_rounded.txt
src/DarkNews/aux_data/alphaQED/: wpd_project.json
src/DarkNews/detectors/: dune_nd_fhc.json  dune_nd_fhc.py  dune_nd_fhc.txt  dune_nd_rhc.json  dune_nd_rhc.py  dune_nd_rhc.txt  microboone.json  microboone.py  microboone.txt  minerva_le.json  minerva_le.py  minerva_le_fhc.json  minerva_le_fhc.py  minerva_le_fhc.txt  minerva_me.json  minerva_me.py  minerva_me_fhc.json  minerva_me_fhc.py  minerva_me_fhc.txt  miniboone.json  miniboone.py  miniboone_fhc.json  miniboone_fhc.py  miniboone_fhc.txt  minos_le_fhc.json  minos_le_fhc.py  minos_le_fhc.txt  minos_me_fhc.json  minos_me_fhc.py  minos_me_fhc.txt  nd280_fhc.json  nd280_fhc.py  nd280_fhc.txt  nova_le_fhc.json  nova_le_fhc.py  nova_le_fhc.txt  user.json  user.py  user.txt
src/DarkNews/fluxes/: MINERvANUbeamNumu.txt  MicroBooNE_BNB_flux.txt
src/DarkNews/fluxes/T2Kflux2016/: t2kflux_2016_nd280_plus250kA.txt  t2kflux_2016_sk_minus250kA.txt  t2kflux_2016_sk_plus250kA.txt
src/DarkNews/fluxes/data_release_DUNE/: create_numi_flux.ipynb  flux_dune_antineutrino_FD_globes.txt  flux_dune_antineutrino_ND_globes.txt  flux_dune_neutrino_ND_globes.txt
src/DarkNews/fluxes/data_release_FASERv/: FASER_-12.txt  FASER_12.txt  FASER_16.txt  FASER_CCint_-12.txt  FASER_CCint_-16.txt  FASER_CCint_14.txt  FASER_CCint_16.txt  create_FASER_fluxes.ipynb
src/DarkNews/fluxes/data_release_MINIBOONE/: t2k_write.ipynb
src/DarkNews/fluxes/data_release_NuMI_on_axis/: Nu_Flux_wandcsplinefix_nueFHC.txt  Nu_Flux_wandcsplinefix_numuRHC.txt  get_minerva_fluxes.sh  mikes_script.py  nueRHC.txt  nuebarFHC.txt  nuebarRHC.txt  numuFHC.txt
src/DarkNews/fluxes/data_release_T2K_2016/: t2k_write.ipynb  (+1 more)
src/DarkNews/store/: geom_old.py  hepevt.py  hist_plot.py  integrands_edits.py
tests/: conftest.py  helpers.py  run_simulation_example.ipynb  test_argparse.py  test_file_outputs.py  test_inputs.py  test_outputs.py  test_parameter_file_3portal.txt  test_parameter_file_generic.txt  test_physics.py  test_predictions.py  test_readoutputs.py  test_scripts.py
(+105 files in other folders)
