[metadata]
name = DarkNews
author = "Abdullahi, Hoefken, Hostert, Massaro"
author_email = "mhostert@perimeterinstitute.ca"
version = attr: DarkNews.__version__
license = "MIT"
description = A lightweight neutrino scattering generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhostert/DarkNews-generator
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
zip_safe = False
package_dir = 
	=src

packages = find:

python_requires = >=3.6.1

install_requires =
	dill
	numpy
	scipy
	pandas>=1.0
	pyarrow
	vegas>=5.1.1
	Particle
	pyparsing
	matplotlib
	pyhepmc_ng @ git+https://git@github.com/scikit-hep/pyhepmc@master

setup_requires =
	numpy

[options.packages.find]
where = src

[options.package_data]
* = 
	include/*
	include/*/*
	include/*/*/*

DarkNews = py.typed

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.entry_points]
console_scripts =
	dn_gen = DarkNews.scripts:dn_gen