[metadata]
name = DarkNews
author = "Asli Abdullahi, Jaime Hoefken, Matheus Hostert, Daniele Massaro"
author_email = "mhostert@perimeterinstitute.ca"
version = attr: DarkNews.__version__
license = "MIT"
description = A lightweight nu-A scattering generator for heavy neutral lepton production
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhostert/DarkNews-generator
classifiers =
    Programming Language :: Cython
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
package_dir = 
	=src

packages = find:

python_requires = >=3.6.1

install_requires =
	dill
	numpy
	scipy
	pandas>=1.0
	pyarrow
	vegas>=5.1.1
	Particle
	pyparsing
	matplotlib
	; pyhepmc_ng @ git+https://git@github.com/scikit-hep/pyhepmc@master
	pyhepmc_ng
	importlib_resources; python_version < "3.7"

setup_requires =
	numpy

[options.packages.find]
where = src

[options.package_data]
* = 
	include/*/*.dat
	include/*/*.txt
	include/*/*.py
	include/assets/*

DarkNews = py.typed

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.entry_points]
console_scripts =
	dn_gen = DarkNews.scripts:dn_gen
	dn_get_examples = DarkNews.scripts:dn_get_examples