[metadata]
name = DarkNews
authors = [
	{ name="Asli Abdullahi"},
	{ name="Jaime Hoefken"},
	{ name="Matheus Hostert", email="mhostert@pitp.ca"},
	{ name="Daniele Massaro"},
	]

author_email = "mhostert@pitp.ca"
version = attr: DarkNews.__version__
license = "MIT"
description = A lightweight nu-A scattering generator for heavy neutral lepton production
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhostert/DarkNews-generator
classifiers =
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
package_dir = 
	=src

packages = find:

python_requires = >=3.7

install_requires =
	dill
	numpy
	scipy
	pandas>=1.0
	vegas>=5.1.1
	Particle
	pyparsing
	matplotlib
	pyhepmc>=2.7.1

setup_requires =
	numpy

[options.packages.find]
where = src

[options.package_data]
* = 
	include/*/*.dat
	include/*/*.txt
	include/*/*.py
	include/assets/*

DarkNews = py.typed

[options.extras_require]
parquet = 
	pyarrow

testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
	pyarrow

[options.entry_points]
console_scripts =
	dn_gen = DarkNews.scripts:dn_gen
	dn_get_examples = DarkNews.scripts:dn_get_examples